@@ -1,3 +1,8 @@
+Summary of important user-visible changes for nurbs 1.3.8:
+-------------------------------------------------------------------
+
+ * inst/nrbkntremove.m: added new function
+
 Summary of important user-visible changes for nurbs 1.3.7:
 -------------------------------------------------------------------
 
